# 3DRealScene

./: .gitignore  GUIDE.md  README.md  RealScene3D.sln  docker-compose.storage.yml
docs/: ModelLoaders-README.md  Obj2Tiles-Integration-Implementation.md  Obj2Tiles-Integration-Progress-Report-CN.md  README.md
scripts/: README.md  check-migration-sync.bat  check-migration-sync.sh  create-migration.bat  create-migration.sh  reset-database.bat  reset-database.sh  simple-update-positions.sql  update-positions.py  update-scene-object-positions.sql
src/RealScene3D.Application/: RealScene3D.Application.csproj
src/RealScene3D.Application/DTOs/: SceneDtos.cs  SlicingDtos.cs  UserDtos.cs  WorkflowDtos.cs  WorkflowStatisticsDtos.cs
src/RealScene3D.Application/Interfaces/: IModelLoader.cs  IModelLoaderFactory.cs  ISceneObjectService.cs  ISceneService.cs  ISlicingAppService.cs  ISpatialAnalysisService.cs  ISpatialSplitterService.cs  IUserService.cs  IWorkflowService.cs
src/RealScene3D.Application/Services/: AdaptiveSlicingStrategy.cs  B3dmGenerator.cs  CmptGenerator.cs  GltfGenerator.cs  GltfModelLoader.cs  GridSlicingStrategy.cs  I3dmGenerator.cs  IndexFileComponents.cs  IndexFileGenerator.cs  KdTreeSlicingStrategy.cs  MeshDecimationService.cs  ModelBoundingBoxExtractor.cs  MonitoringService.cs  MtlParser.cs  Obj2TilesIntegrationService.cs  Obj2TilesService.cs  ObjModelLoader.cs  OctreeSlicingStrategy.cs  PntsGenerator.cs  RecursiveSubdivisionStrategy.cs  SceneObjectService.cs  SceneService.cs  SlicingService.cs  SlicingStrategyFactory.cs  SlicingUtilities.cs  SpatialAnalysisService.cs  SpatialSplitterService.cs  TaskProgressHistory.cs  TextureAtlasGenerator.cs  TileGenerator.cs  TileGeneratorFactory.cs  TilesetGenerator.cs  UserService.cs  WorkflowNodeExecutor.cs  WorkflowPerformanceOptimizer.cs  WorkflowService.cs  WorkflowStatisticsService.cs  WorkflowTemplateService.cs
src/RealScene3D.Domain/: RealScene3D.Domain.csproj
src/RealScene3D.Domain/Algorithms/: MaxRectanglesBinPack.cs
src/RealScene3D.Domain/Entities/: BaseEntity.cs  BoneWeight.cs  Geometry.cs  Material.cs  Monitoring.cs  Scene3D.cs  SceneObject.cs  Slicing.cs  SlicingConfig.cs  User.cs  UserLog.cs  ViewportInfo.cs  Workflow.cs
src/RealScene3D.Domain/Enums/: CommonEnums.cs  MaterialEnums.cs  MonitoringEnums.cs  SlicingEnums.cs  TileEnums.cs  UserRole.cs  ValidationEnums.cs  WorkflowEnums.cs
src/RealScene3D.Domain/Geometry/: Box2.cs  Box3.cs  Edge.cs  Face.cs  FaceT.cs  IMesh.cs  Mesh.cs  MeshT.cs  Rectangle.cs  Vector2.cs  Vector2d.cs  Vector2i.cs  Vector3.cs  Vector3d.cs  Vector3i.cs  Vector4.cs  Vector4d.cs  Vector4i.cs  Vertex2.cs  Vertex3.cs
src/RealScene3D.Domain/Interfaces/: IMongoRepository.cs  IMonitoringService.cs  IRepository.cs  ISliceRepository.cs  ISlicingService.cs  ISlicingStrategy.cs  ISlicingStrategyFactory.cs  ITileGeneratorFactory.cs  IUnitOfWork.cs  IWorkflowEngine.cs
src/RealScene3D.Domain/Materials/: IlluminationModel.cs  Material.cs  MaterialEx.cs  RGB.cs  TexturesCache.cs
src/RealScene3D.Domain/Services/: SlicingService.cs
src/RealScene3D.Domain/Utils/: Common.cs  Extenders.cs  MathHelper.cs  MeshUtils.cs  SymmetricMatrix.cs  VertexUtils.cs
src/RealScene3D.External/MeshDecimator/: BoneWeight.cs  License  Logging.cs  Mesh.cs  MeshDecimation.cs
src/RealScene3D.External/MeshDecimatorCore/: BoneWeight.cs  Logging.cs  Mesh.cs  MeshDecimation.cs
src/RealScene3D.External/MeshTiling/: Common.cs  Extenders.cs  GlobalUsings.cs  RealScene3D.MeshTiling.csproj  TexturesCache.cs
src/RealScene3D.Infrastructure/: RealScene3D.Infrastructure.csproj
src/RealScene3D.Infrastructure/Authentication/: IJwtTokenService.cs  JwtSettings.cs  JwtTokenService.cs
src/RealScene3D.Infrastructure/Data/: ApplicationDbContext.cs  ApplicationDbContextFactory.cs  PostgreSqlDbContext.cs
src/RealScene3D.Infrastructure/Interop/: OSGB23dTilesHelper.cs  OsgbReaderHelper.cs
src/RealScene3D.Infrastructure/Migrations/: 20251015084924_InitialCreate.Designer.cs  20251015084924_InitialCreate.cs  20251018091805_AddMissingEntities.Designer.cs  20251018091805_AddMissingEntities.cs  20251021032522_InitialCreate.Designer.cs  20251021032522_InitialCreate.cs  20251028081743_InitialCreate.Designer.cs  20251028081743_InitialCreate.cs  20251030025853_InitialCreate.Designer.cs  20251030025853_InitialCreate.cs  20251208121512_InitialCreate.Designer.cs  20251208121512_InitialCreate.cs  20260427055526_InitialCreate.Designer.cs  20260427055526_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
src/RealScene3D.Infrastructure/MinIO/: MinioBuckets.cs  MinioStorageService.cs
src/RealScene3D.Infrastructure/MongoDB/: MongoDbContext.cs  MongoDbInitializer.cs
src/RealScene3D.Infrastructure/Redis/: CacheKeys.cs  RedisCacheService.cs
src/RealScene3D.Infrastructure/Repositories/: Repository.cs  SliceRepository.cs  UnitOfWork.cs
src/RealScene3D.Lib/: .gitignore  README.md
src/RealScene3D.Lib/OSGB/: .gitignore  AssemblyInfo.cpp  CMakeLists.txt  OsgbReader.i  README.md  RealScene3D.Lib.OSGB.vcxproj  build.bat  setup-vcpkg.bat  test_osgb_to_b3dm.cpp  vcpkg.json
src/RealScene3D.Lib/OSGB/Examples/: OsgbTextureExtractionExample.cs
src/RealScene3D.Lib/OSGB/Interop/: OSGB23dTiles.i  OsgbReaderNative.cs
src/RealScene3D.Lib/OSGB/Managed/: OsgbReaderWrapper.cpp  OsgbReaderWrapper.h
src/RealScene3D.Lib/OSGB/Native/: CoordinateApi.cpp  CoordinateApi.h  Extern.h  GeoTransform.cpp  GeoTransform.h  LodPipeline.h  MeshProcessor.cpp  MeshProcessor.h  OSGB23dTiles.cpp  OSGB23dTiles.h  OSGBTools.cpp  OSGBTools.h  Osgb23dTile.cpp  OsgbReader.cpp  OsgbReader.h  OsgbReaderCApi.cpp  OsgbReaderCApi.h  Tileset.cpp  Tileset.h
src/RealScene3D.Lib/OSGB/Test/: OSGB23dTilesTest.cpp
src/RealScene3D.Tests/: ObliqueSliceMetadataTests.cs  Program.cs  RealScene3D.Tests.csproj  WorkflowServiceTests.cs
src/RealScene3D.Web/: index.html  package-lock.json  package.json  vite.config.ts
src/RealScene3D.WebApi/: Program.cs  RealScene3D.WebApi.csproj  RealScene3D.WebApi.http  appsettings.Development.json  appsettings.json  package-lock.json
(+286 files in other folders)
